rename dev home variable

--- a/menu-tools-dev-ubuntu/bin/ambiente.conf
+++ b/menu-tools-dev-ubuntu/bin/ambiente.conf
@@ -1,4 +1,4 @@
-export SAJ_DEV_HOME="$HOME/dev/saj"
+export DEV_HOME="$HOME/dev"
 
 export ECLIPSE_VERSION=4.9
 export DBEAVER_VERSION=5.3.5
@@ -13,15 +13,15 @@ export JDK_VERSION=current
 export VISUALVM_VERSION=$JDK_VERSION
 export JBOSS_VERSION=6.4.1-eap
 
-export ECLIPSE_HOME="$SAJ_DEV_HOME/apps/eclipse/$ECLIPSE_VERSION"
-export DBEAVER_HOME="$SAJ_DEV_HOME/apps/dbeaver/$DBEAVER_VERSION"
-export SUBLIME_HOME="$SAJ_DEV_HOME/apps/sublime/$SUBLIME_VERSION"
-export ARCHITECT_HOME="$SAJ_DEV_HOME/apps/architect/$ARCHITECT_VERSION"
-export TIBEMS_HOME="$SAJ_DEV_HOME/apps/tibco-ems/$TIBEMS_VERSION"
-export TIBGEMS_HOME="$SAJ_DEV_HOME/apps/tibco-gems/$TIBGEMS_VERSION"
-export IREPORT_HOME="$SAJ_DEV_HOME/apps/ireport/$IREPORT_VERSION"
-export JAVADECOMPILER_HOME="$SAJ_DEV_HOME/apps/jd-gui/$JAVADECOMPILER_VERSION"
-export SOAPUI_HOME="$SAJ_DEV_HOME/apps/soapui/$SOAPUI_VERSION"
+export ECLIPSE_HOME="$DEV_HOME/apps/eclipse/$ECLIPSE_VERSION"
+export DBEAVER_HOME="$DEV_HOME/apps/dbeaver/$DBEAVER_VERSION"
+export SUBLIME_HOME="$DEV_HOME/apps/sublime/$SUBLIME_VERSION"
+export ARCHITECT_HOME="$DEV_HOME/apps/architect/$ARCHITECT_VERSION"
+export TIBEMS_HOME="$DEV_HOME/apps/tibco-ems/$TIBEMS_VERSION"
+export TIBGEMS_HOME="$DEV_HOME/apps/tibco-gems/$TIBGEMS_VERSION"
+export IREPORT_HOME="$DEV_HOME/apps/ireport/$IREPORT_VERSION"
+export JAVADECOMPILER_HOME="$DEV_HOME/apps/jd-gui/$JAVADECOMPILER_VERSION"
+export SOAPUI_HOME="$DEV_HOME/apps/soapui/$SOAPUI_VERSION"
 export JDK_HOME="$HOME/.sdkman/candidates/java/current"
 export VISUALVM_HOME=$JDK_HOME
-export JBOSS_HOME="$SAJ_DEV_HOME/apps/jboss/$JBOSS_VERSION"
+export JBOSS_HOME="$DEV_HOME/apps/jboss/$JBOSS_VERSION"
